srv/hugo/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hugo-hugo
  name: hugo-hugo
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hugo-hugo
      name: hugo-hugo
    spec:
      containers:
      - image: jojomi/hugo:0.25.1
        name: hugo-hugo
        volumeMounts:
        - mountPath: /src
          name: hugo-hugo-src
        - mountPath: /output
          name: hugo-hugo-output
      restartPolicy: Always
      volumes:
      - name: hugo-hugo-src
        persistentVolumeClaim:
          claimName: hugo-hugo-src
      - name: hugo-hugo-output
        persistentVolumeClaim:
          claimName: hugo-hugo-output

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hugo-web
  name: hugo-web
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hugo-web
      name: hugo-web
    spec:
      containers:
      - image: jojomi/nginx-static:latest
        name: hugo-web
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www
          name: hugo-web
      restartPolicy: Always
      volumes:
      - name: hugo-web
        persistentVolumeClaim:
          claimName: hugo-web
